<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HotelReservation</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="email_">Email:</string>
    <string name="password_">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="or">or</string>
    <string name="title_activity_activity_create_account">Create Account</string>
    <string name="title_activity_main_screen">Get_a_room</string>
    <string name="ManageReservations">Manage Reservations</string>
    <string name="ManageHotels">Manage Hotels</string>
    <string name="Info">Info</string>
    <string name="Reservations">Reservations</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="title_activity_select_user">Get A Room</string>
    <string name="owner">Owner</string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_test">MainTestActivity</string>
    <string name="title_activity_testnavigation">TESTNAVIGATION</string>
    <string name="name">Name</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="don_apos_t_worry_">Don&amp;apos;t worry!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_as">Login as</string>
    <string name="welcome">Get a room</string>
    <string name="title_activity_fragment1">Fragment1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_fragment2">Fragment2</string>
    <string name="title_activity_fragment3">Fragment3</string>
    <string name="title_activity_fragment4">Fragment4</string>
    <string name="title_activity_fragment_hotels">Fragment_hotels</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="name_">Name:</string>
    <string name="reservations">reservations</string>
    <string name="settings">Settings</string>
    <string name="title_activity_fragment_maps">Fragment_maps</string>
    <string name="menu_legalnotices">menu_legalnotices</string>
    <string name="title_activity_maptest">MAPTEST</string>
    <string name="my_hotels">My Hotels</string>
    <string name="sample">sample</string>
    <string name="title_activity_list_black_font">MainActivity</string>
    <string name="title_activity_add_hotel">AddHotelActivity</string>
    <string name="title_activity_fragment_add_room">FragmentAddRoom</string>
    <string name="title_activity_fragment_add_hotel2">FragmentAddHotel2</string>
    <string name="more_info">More info</string>
    <string name="no_reservation_done_yet_">No reservation done yet!</string>
    <string name="todo">TODO</string>
</resources>
