<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurbackground"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hotelreservation.hotelreseration.LoginActivity" >

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/EmaileditText"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:textColor="#FFFFFF"
        android:text="@string/email_" />

    <TextView
        android:id="@+id/PasswordtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PasswordeditText"
        android:layout_alignLeft="@+id/NameTextView"
        android:textColor="#FFFFFF"
        android:text="@string/password_" />

    <Button
        android:id="@+id/SignInbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:textColor="#fff"
        android:text="@string/sign_in"
        android:layout_below="@+id/PasswordtextView"
        android:layout_marginTop="63dp"
        android:layout_alignStart="@+id/CreateAccountbutton"
        android:layout_alignEnd="@+id/CreateAccountbutton"/>

    <Button
        android:id="@+id/CreateAccountbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasswordtextView"
        android:layout_alignRight="@+id/EmaileditText"
        android:layout_below="@+id/OrtextView"
        android:onClick="changeToCreateAccount"
        android:background="@drawable/custom_button"
        android:textColor="#fff"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/OrtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignInbutton"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/EmaileditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/forgotpasstext"
        android:layout_below="@+id/LoginAs"
        android:layout_marginTop="33dp"
        android:layout_toRightOf="@+id/PasswordtextView"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/PasswordeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EmaileditText"
        android:layout_alignRight="@+id/EmaileditText"
        android:layout_below="@+id/EmaileditText"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" >

    </EditText>

    <TextView
        android:id="@+id/LoginAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EmaileditText"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="43dp"
        android:text="@string/login_as"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/forgotpasstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="13dp"
        android:clickable="true"
        android:onClick="changeForgotPass"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/LoginAs"
        android:layout_alignRight="@+id/LoginAs"
        android:layout_below="@+id/LoginAs"
        android:background="@android:color/darker_gray"
        android:visibility="invisible"/>

</RelativeLayout>